# rfc-cli

./: README.md  setup.cfg
rfc_cli/: __init__.py  __main__.py  core.py
rfc_cli/cache/: requests.sqlite
