[metadata]
name = rfc_cli
version = attr: rfc_cli.__version__
description = A command line viewer for RFCs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wasi-master.github.io/rfc-cli/
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    rfc
    rfc-cli
project_urls =
    Bug Tracker = https://github.com/wasi-master/rfc-cli/issues
    Source = https://github.com/wasi-master/rfc-cli
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    rfc_cli
install_requires =
    requests-cache
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    rfc=rfc_cli.__main__:app
pipx.run =
    rfc_cli=rfc_cli.__main__:app
